--- a/Valley/valley/configs/experiment/valley_stage1.yaml
+++ b/Valley/valley/configs/experiment/valley_stage1.yaml
@@ -1,6 +1,6 @@
 model_name_or_path: vinai/PhoGPT-4B-Chat
-video_data_path: /home/ViVidBot/training/shard_0_new.json
-video_folder: /content/video/shard_0
+video_data_path: /content/vast2m_vi_all.json
+video_folder: /content
 output_dir: model/output
 # experiment name
 project_name: valley
