--- a/Valley/valley/configs/experiment/valley_stage1.yaml
+++ b/Valley/valley/configs/experiment/valley_stage1.yaml
@@ -1,4 +1,6 @@
 model_name_or_path: vinai/PhoGPT-4B-Chat
+data_path: /content/instruct500k_vi_all.json
+image_folder: /content
 video_data_path: /content/vast2m_vi_all.json
 video_folder: /content
 output_dir: model/output
