--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-googletrans = "3.1.0a0"
 translators = "^5.9.2"
 datasets = "^2.20.0"
 tqdm = "^4.66.4"
 yt-dlp = "^2024.7.2"
 google-generativeai = "^0.7.1"
 python-dotenv = "^1.0.1"
+groq = "^0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
