--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ yt-dlp = "^2024.7.2"
 google-generativeai = "^0.7.1"
 python-dotenv = "^1.0.1"
 groq = "^0.9.0"
+openai = "^1.35.13"
 
 
 [tool.poetry.group.dev.dependencies]
