--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ google-generativeai = "^0.7.1"
 python-dotenv = "^1.0.1"
 groq = "^0.9.0"
 openai = "^1.35.13"
+anthropic = "^0.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
