--- a/vividbot/valley/configs/experiment/valley_stage1.yaml
+++ b/vividbot/valley/configs/experiment/valley_stage1.yaml
@@ -4,7 +4,7 @@ hf_repo_image: Vividbot/instruct500k_vi
 image_folder: /content
 video_data_path: /content/vast2m_vi_all.json
 video_folder: /content
-hf_reppo_video: Vividbot/vast2m_vi
+hf_repo_video: Vividbot/vast2m_vi
 output_dir: model/output
 # experiment name
 project_name: valley
