--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+packages = [
+    { include = "vividbot" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -16,6 +19,12 @@ python-dotenv = "^1.0.1"
 groq = "^0.9.0"
 openai = "^1.35.13"
 anthropic = "^0.31.0"
+langchain = "^0.2.11"
+langchain-groq = "^0.1.6"
+langchain-openai = "^0.1.17"
+langchain-fireworks = "^0.1.5"
+langchain-together = "^0.1.4"
+langchain-anthropic = "^0.1.20"
 
 
 [tool.poetry.group.dev.dependencies]
