add langfuse monitoring

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ langchain-fireworks = "^0.1.5"
 langchain-together = "^0.1.4"
 langchain-anthropic = "^0.1.20"
 langchain-community = "^0.2.10"
+langfuse = "^2.39.3"
 
 
 [tool.poetry.group.dev.dependencies]
