--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ langchain-core = "^0.2.24"
 pydotmap = "^0.1.3"
 opencv-python = "^4.10.0.84"
 beautifulsoup4 = "^4.12.3"
+langchain-google-genai = "^1.0.8"
 
 
 [tool.poetry.group.dev.dependencies]
