--- a/requirements.txt
+++ b/requirements.txt
@@ -798,6 +798,9 @@ langchain-core==0.2.24 ; python_version >= "3.10" and python_version < "4.0" \
 langchain-fireworks==0.1.5 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:f51aafbbfa4c8b8281fac37926af4ce3cf0912f40a5c1840175fa32860e27c9a \
     --hash=sha256:ff44b35e305c979f84e276d8602db0d73903974b506dbe600009e9ac7b1cea13
+langchain-google-genai==1.0.8 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:4b5b074476f073f4f6f0d1e74c811bb66e4caaf2d6b57b14bf6a1eab36de8c4e \
+    --hash=sha256:675dab1afa8f165c6169512dae984c90fd9fe2e8a54bdf7d0a0ccd826ee719d4
 langchain-groq==0.1.6 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:c7e91f8a333299b25dad5e8c3bc555cc579560431247ac8e0c3d2705dd7411f8 \
     --hash=sha256:ecd3aac54e5e454633f3920a11d093dcb425c18830f721cc86e69e5acfbe7c85
