--- a/vividbot/valley/configs/experiment/valley_stage2.yaml
+++ b/vividbot/valley/configs/experiment/valley_stage2.yaml
@@ -1,10 +1,13 @@
-model_name_or_path:  Path/ to/ pretrain/ valley/ from/ stage1
-data_path:  Path/ to/ LLaVA-Instruct-150K/ llava_instruct_150k.json
-image_folder:  Path/ to/ COCO/ train2014
-video_data_path: /Path/ to/ Valley-Instruct/ valley_instruct_73k.json
-video_folder:  Path/ to/ Valley-Instruct/ videos
-output_dir: Model/ Output/ path
-prediction_file_name: Model/ Output/ path/ eval_result.jsonl # evaluation file output path
+model_name_or_path:  /content/model_pretrain/vividbot-pretrained
+data_path:  
+image_folder:  
+hf_repo_image: Vividbot/instruct500k_vi
+hf_repo_image: Vividbot/instruct500k_vi
+video_data_path: /content/videoinstruck100_vi_all.json
+video_folder:  /content
+hf_repo_video: Vividbot/videoinstruck100k
+output_dir: model/output/stage2
+prediction_file_name: model/output/stage2/eval_result.jsonl # evaluation file output path
 # experiment name
 project_name: valley
 run_name: valley_stage2
