--- a/vividbot/valley/configs/experiment/valley_stage2_lora.yaml
+++ b/vividbot/valley/configs/experiment/valley_stage2_lora.yaml
@@ -24,7 +24,7 @@ lora: True
 is_multimodal: True
 
 num_train_epochs: 3
-per_device_train_batch_size: 4
+per_device_train_batch_size: 2
 save_strategy: 'no'
 lora_save_strategy: steps # if do lora training, turn on this button, to only save lora weight. support ['steps','epochs','no']
 save_steps: 5000
@@ -38,8 +38,8 @@ vision_tower: openai/clip-vit-large-patch14
 mm_vision_select_layer: -2
 mm_use_im_start_end: True
 lazy_preprocess: True
-bf16: False
-fp16: True
+bf16: True
+fp16: False
 tf32: False
 per_device_eval_batch_size: 1
 gradient_accumulation_steps: 1
