--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     rev: 1.8.3
     hooks:
       - id: poetry-check
-      - id: poetry-lock
+      # - id: poetry-lock
       - id: poetry-export
-        args: ["--dev", "-f", "requirements.txt", "-o", "requirements.txt"]
+        args: ["--without-hashes", "-f", "requirements.txt", "-o", "requirements.txt"]
       - id: poetry-install
