--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,21 @@ opencv-python = "^4.10.0.84"
 beautifulsoup4 = "^4.12.3"
 langchain-google-genai = "^1.0.8"
 transformers = "^4.43.3"
+huggingface-hub = {extras = ["hf-transfer"], version = "^0.24.5"}
+peft = "^0.12.0"
+av = "^12.3.0"
+decord = "^0.6.0"
+accelerate = "^0.33.0"
+deepspeed = "^0.14.4"
+einops = "^0.8.0"
+evaluate = "^0.4.2"
+scikit-image = "^0.24.0"
+prettytable = "^3.10.2"
+opencv-python-headless = "^4.10.0.84"
+wandb = "^0.17.5"
+torchvision = "^0.19.0"
+sentencepiece = "^0.2.0"
+unsloth = {git = "https://github.com/unslothai/unsloth.git"}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -46,7 +61,6 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-exclude = ["Valley/"]
 line-length = 88
 indent-width = 2
 target-version = "py310"
