add fallback paths for hf videos

--- a/vividbot/valley/configs/experiment/valley_stage2_lora.yaml
+++ b/vividbot/valley/configs/experiment/valley_stage2_lora.yaml
@@ -20,6 +20,7 @@ freeze_backbone: False
 tune_mm_mlp_adapter: True
 # wether lora
 lora: True
+should_save: True # save merged model
 # wether multimodal
 is_multimodal: True
 
