--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,8 @@ wandb = "^0.17.5"
 torchvision = "^0.19.0"
 sentencepiece = "^0.2.0"
 unsloth = {git = "https://github.com/unslothai/unsloth.git"}
+bitsandbytes = "^0.43.3"
+gguf = "^0.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
