--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
 av==12.3.0 ; python_version >= "3.10" and python_version < "4.0"
 backoff==2.2.1 ; python_version >= "3.10" and python_version < "4.0"
 beautifulsoup4==4.12.3 ; python_version >= "3.10" and python_version < "4.0"
+bitsandbytes==0.43.3 ; python_version >= "3.10" and python_version < "4.0"
 brotli==1.1.0 ; python_version >= "3.10" and python_version < "4.0" and implementation_name == "cpython"
 brotlicffi==1.1.0.0 ; python_version >= "3.10" and python_version < "4.0" and implementation_name != "cpython"
 cachetools==5.4.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -35,6 +36,7 @@ fireworks-ai==0.14.0 ; python_version >= "3.10" and python_version < "4.0"
 frozenlist==1.4.1 ; python_version >= "3.10" and python_version < "4.0"
 fsspec==2024.5.0 ; python_version >= "3.10" and python_version < "4.0"
 fsspec[http]==2024.5.0 ; python_version >= "3.10" and python_version < "4.0"
+gguf==0.9.1 ; python_version >= "3.10" and python_version < "4.0"
 gitdb==4.0.11 ; python_version >= "3.10" and python_version < "4.0"
 gitpython==3.1.43 ; python_version >= "3.10" and python_version < "4.0"
 google-ai-generativelanguage==0.6.6 ; python_version >= "3.10" and python_version < "4.0"
