--- a/vividbot/valley/configs/experiment/vivid_stage1_phogpt4b.yaml
+++ b/vividbot/valley/configs/experiment/vivid_stage1_phogpt4b.yaml
@@ -26,7 +26,7 @@ is_multimodal: True
 num_train_epochs: 1
 per_device_train_batch_size: 8
 save_strategy: steps
-save_steps: 2400
+save_steps: 2000
 learning_rate: 2e-3
 gradient_checkpointing: True
 
@@ -37,8 +37,8 @@ vision_tower: openai/clip-vit-large-patch14
 mm_vision_select_layer: -2
 mm_use_im_start_end: True
 lazy_preprocess: True
-bf16: False
-fp16: True
+bf16: True
+fp16: False
 tf32: False
 per_device_eval_batch_size: 1
 gradient_accumulation_steps: 1
