--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ target-version = "py310"
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
 select = ["E4", "E7", "E9", "F"]
-ignore = ["E722", "E402", "E712"]
+ignore = ["E722", "E402", "E712", "E731"]
 
 fixable = ["ALL"]
 unfixable = []
