--- a/vividbot/valley/configs/experiment/vivid_stage1_phogpt4b.yaml
+++ b/vividbot/valley/configs/experiment/vivid_stage1_phogpt4b.yaml
@@ -28,7 +28,7 @@ per_device_train_batch_size: 8
 save_strategy: steps
 save_steps: 2000
 learning_rate: 2e-3
-gradient_checkpointing: True
+gradient_checkpointing: False
 
 # wether do fast epoch
 fast_epoch: False
