--- a/requirements.txt
+++ b/requirements.txt
@@ -154,6 +154,7 @@ sympy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
 tenacity==8.5.0 ; python_version >= "3.10" and python_version < "4.0"
 tifffile==2024.7.24 ; python_version >= "3.10" and python_version < "4.0"
 tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
+timm==1.0.8 ; python_version >= "3.10" and python_version < "4.0"
 tokenizers==0.19.1 ; python_version >= "3.10" and python_version < "4.0"
 torch==2.4.0 ; python_version >= "3.10" and python_version < "4.0"
 torchvision==0.19.0 ; python_version >= "3.10" and python_version < "4.0"
