--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ build-backend = "poetry.core.masonry.api"
 line-length = 88
 indent-width = 2
 target-version = "py310"
+extend-include = ["*.ipynb"]
 
 [tool.ruff.lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
