--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
 imageio==2.34.2 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
 jiter==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+joblib==1.4.2 ; python_version >= "3.10" and python_version < "4.0"
 jsonpatch==1.33 ; python_version >= "3.10" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 langchain-anthropic==0.1.22 ; python_version >= "3.10" and python_version < "4.0"
@@ -89,6 +90,7 @@ mutagen==1.47.0 ; python_version >= "3.10" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 networkx==3.3 ; python_version >= "3.10" and python_version < "4.0"
 ninja==1.11.1.1 ; python_version >= "3.10" and python_version < "4.0"
+nltk==3.9.1 ; python_version >= "3.10" and python_version < "4.0"
 numpy==1.26.4 ; python_version >= "3.10" and python_version < "4.0"
 nvidia-cublas-cu12==12.1.3.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
 nvidia-cuda-cupti-cu12==12.1.105 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.10" and python_version < "4.0"
@@ -131,6 +133,7 @@ pydantic==2.8.2 ; python_version >= "3.10" and python_version < "4.0"
 pydotmap==0.1.3 ; python_version >= "3.10" and python_version < "4.0"
 pyexecjs==1.5.1 ; python_version >= "3.10" and python_version < "4.0"
 pyparsing==3.1.2 ; python_version >= "3.10" and python_version < "4.0"
+python-crfsuite==0.9.10 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -140,6 +143,7 @@ requests==2.32.3 ; python_version >= "3.10" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.10" and python_version < "4"
 safetensors==0.4.3 ; python_version >= "3.10" and python_version < "4.0"
 scikit-image==0.24.0 ; python_version >= "3.10" and python_version < "4.0"
+scikit-learn==1.5.1 ; python_version >= "3.10" and python_version < "4.0"
 scipy==1.14.0 ; python_version >= "3.10" and python_version < "4.0"
 sentencepiece==0.2.0 ; python_version >= "3.10" and python_version < "4.0"
 sentry-sdk==2.12.0 ; python_version >= "3.10" and python_version < "4.0"
@@ -152,6 +156,7 @@ soupsieve==2.5 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.31 ; python_version >= "3.10" and python_version < "4.0"
 sympy==1.13.1 ; python_version >= "3.10" and python_version < "4.0"
 tenacity==8.5.0 ; python_version >= "3.10" and python_version < "4.0"
+threadpoolctl==3.5.0 ; python_version >= "3.10" and python_version < "4.0"
 tifffile==2024.7.24 ; python_version >= "3.10" and python_version < "4.0"
 tiktoken==0.7.0 ; python_version >= "3.10" and python_version < "4.0"
 tokenizers==0.19.1 ; python_version >= "3.10" and python_version < "4.0"
@@ -164,6 +169,8 @@ triton==3.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and 
 typing-extensions==4.12.2 ; python_version >= "3.10" and python_version < "4.0"
 typing-inspect==0.9.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0"
+underthesea-core==1.0.4 ; python_version >= "3.10" and python_version < "4.0"
+underthesea==6.8.4 ; python_version >= "3.10" and python_version < "4.0"
 unsloth @ git+https://github.com/unslothai/unsloth.git@4e570be9ae4ced8cdc64e498125708e34942befc ; python_version >= "3.10" and python_version < "4.0"
 uritemplate==4.1.1 ; python_version >= "3.10" and python_version < "4.0"
 urllib3==2.2.2 ; python_version >= "3.10" and python_version < "4.0"
